deploy/base/console/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: console
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: console.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: console 
                port:
                  number: 8080
